--- a/templates/login.html
+++ b/templates/login.html
@@ -3,105 +3,15 @@
 {% block title %}
     Log In
 {% endblock %}
-
-{% block main %}
-        <div class="w-50 mb-5 mt-5 yoko wide">
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>FW</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
-
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>FW</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
-
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>FW</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
+{%block main %}
+    <form action="/login" method="post">
+        <div class="mb-3">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
         </div>
-
-
-        <div class="w-50 py-5 yoko wide">
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>MF</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
-
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>MF</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
-
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>MF</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
+        <div class="mb-3">
+            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
         </div>
-
-
-        <div class="w-50 mt-5 mb-5 yoko wide">
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>DF</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
-
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>DF</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
-
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>DF</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
-
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>DF</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
-        </div>
-
-
-        <div class="w-50 mt-5 mb-5 yoko wide">
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>GK</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
-        </div>
+        <button class="btn btn-primary" type="submit">Log In</button>
+    </form>
 
 {% endblock %}
