--- a/templates/court-layout.html
+++ b/templates/court-layout.html
@@ -17,6 +17,7 @@
 
     </head>
     <body>
+        <div class="box">
             <nav class="border navbar navbar-expand-md navbar-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="/"><span class="red">FOOTBALL</span><span class="red">MANAGER</span> <span class="yellow">something</span></a>
@@ -56,5 +57,7 @@
             <main class="container-fluid py-5 text-center">
                 {% block main %}{% endblock %}
             </main>
+
+        </div>
     </body>
 </html>
