--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
 
     </head>
     <body>
-        <div class="box">
+        <div class="boxe">
             <nav class="border navbar navbar-expand-md navbar-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="/"><span class="red">FOOTBALL</span><span class="red">MANAGER</span> <span class="yellow">something</span></a>
