--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
     Register
 {% endblock %}
 {% block main %}
-    <form action="/login" method="post">
+    <form action="/register" method="post">
 
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
@@ -17,7 +17,7 @@
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirmation" type="password">
         </div>
-        <button class="btn btn-primary" type="submit">Register</button>
+        <button class="btn btn-primary" type="submit">Start!</button>
     </form>
 
 {% endblock %}
