ホームとcreate遷移

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,12 @@
 {% endblock %}
 
 {% block main %}
-    <h1>Hello!</h1>
+    <form action="/index" method="post">
+        <h1>hello</h1>
+
+        <div class="button010">
+            <a href="/create433">create</a>
+        </div>
+    </form>
+
 {% endblock %}
