--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,8 +30,8 @@
                                 <li class="nav-item navbar-brand2"><a class="nav-link" href="/quote"><span class="blue">SAMPLE</span></a></li>
                                 <li class="nav-item navbar-brand2"><a class="nav-link" href="/buy">Buy</a></li>
                                 <li class="nav-item navbar-brand2"><a class="nav-link" href="/sell">Sell</a></li>
-                                <li class="nav-item navbar-brand2"><a class="nav-link" href="/history">History</a></li>
-                                <li class="nav-item navbar-brand2"><a class="nav-link" href="/profit">Profit</a></li>
+                                <li class="nav-item navbar-brand2"><a class="nav-link" href="/login">History</a></li>
+                                <li class="nav-item navbar-brand2"><a class="nav-link" href="/create433">Profit</a></li>
                             </ul>
                             <ul class="navbar-nav ms-auto mt-2">
                                 <li class="nav-item navbar-brand2"><a class="nav-link" href="/logout">Log Out</a></li>
