--- a/templates/create433.html
+++ b/templates/create433.html
@@ -5,102 +5,124 @@
 {% endblock %}
 
 {% block main %}
-        <div class="w-50 mb-5 mt-5 yoko wide">
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>FW</option>
-                    <option value="messi">Messi</option>
-                </select>
+
+        <form action="/create433" method="post">
+            <div class="w-50 mb-5 mt-5 yoko wide">
+                <div class="tate wide">
+                    <img src="{{ image1 }}">
+                    <select class="form-select mx-auto w-auto" name="symbol1">
+                        <option disabled selected>FW</option>
+                        {% for player in squad %}
+                            <option value="{{ player.name }}">{{ player.name }}</option>
+                        {% endfor %}
+                    </select>
+                    <button class="btn btn-primary" type="submit">SELECT!</button>
+                </div>
+
+
+                <div class="tate wide">
+                    <img src="{{ image2 }}">
+                    <select class="form-select mx-auto w-auto" name="symbol2">
+                        <option disabled selected>FW</option>
+                        {% for player in squad %}
+                            <option value="{{ player.name }}">{{ player.name }}</option>
+                        {% endfor %}
+                    </select>
+                    <button class="btn btn-primary" type="submit">SELECT!</button>
+                </div>
+
+                <div class="tate wide">
+                    <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
+                    <select class="form-select mx-auto w-auto" name="symbol">
+                        <option disabled selected>FW</option>
+                        <option value="messi">Messi</option>
+                    </select>
+                </div>
             </div>
 
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>FW</option>
-                    <option value="messi">Messi</option>
-                </select>
+
+            <div class="w-50 py-5 yoko wide">
+                <div class="tate wide">
+                    <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
+                    <select class="form-select mx-auto w-auto" name="symbol">
+                        <option disabled selected>MF</option>
+                        <option value="messi">Messi</option>
+                    </select>
+                </div>
+
+                <div class="tate wide">
+                    <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
+                    <select class="form-select mx-auto w-auto" name="symbol">
+                        <option disabled selected>MF</option>
+                        <option value="messi">Messi</option>
+                    </select>
+                </div>
+
+                <div class="tate wide">
+                    <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
+                    <select class="form-select mx-auto w-auto" name="symbol">
+                        <option disabled selected>MF</option>
+                        <option value="messi">Messi</option>
+                    </select>
+                </div>
             </div>
 
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>FW</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
-        </div>
 
+            <div class="w-50 mt-5 mb-5 yoko wide">
+                <div class="tate wide">
+                    <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
+                    <select class="form-select mx-auto w-auto" name="symbol">
+                        <option disabled selected>DF</option>
+                        <option value="messi">Messi</option>
+                    </select>
+                </div>
 
-        <div class="w-50 py-5 yoko wide">
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>MF</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
+                <div class="tate wide">
+                    <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
+                    <select class="form-select mx-auto w-auto" name="symbol">
+                        <option disabled selected>DF</option>
+                        <option value="messi">Messi</option>
+                    </select>
+                </div>
 
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>MF</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
+                <div class="tate wide">
+                    <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
+                    <select class="form-select mx-auto w-auto" name="symbol">
+                        <option disabled selected>DF</option>
+                        <option value="messi">Messi</option>
+                    </select>
+                </div>
 
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>MF</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
-        </div>
-
-
-        <div class="w-50 mt-5 mb-5 yoko wide">
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>DF</option>
-                    <option value="messi">Messi</option>
-                </select>
+                <div class="tate wide">
+                    <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
+                    <select class="form-select mx-auto w-auto" name="symbol">
+                        <option disabled selected>DF</option>
+                        <option value="messi">Messi</option>
+                    </select>
+                </div>
             </div>
 
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>DF</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
 
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>DF</option>
-                    <option value="messi">Messi</option>
-                </select>
+            <div class="w-50 mt-5 mb-5 yoko wide">
+                <div class="tate wide">
+                    <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
+                    <select class="form-select mx-auto w-auto" name="symbol">
+                        <option disabled selected>GK</option>
+                        <option value="messi">Messi</option>
+                    </select>
+                </div>
             </div>
+        </form>
+        <script type="text/javascript">
 
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>DF</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
-        </div>
+            let img = document.getElementById("image_place");
 
+            let idx = 1;
 
-        <div class="w-50 mt-5 mb-5 yoko wide">
-            <div class="tate wide">
-                <img src="https://cdn.sofifa.net/players/158/023/23_60.png">
-                <select class="form-select mx-auto w-auto" name="symbol">
-                    <option disabled selected>GK</option>
-                    <option value="messi">Messi</option>
-                </select>
-            </div>
-        </div>
+            function upImage()
+            {
+                img.src = "{{ image }}"
+            }
+
+        </script>
 {% endblock %}
