--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,18 @@
         <h1>hello</h1>
 
         <div class="button010">
-            <a href="/create433">create</a>
+            <a href="/create433">create433</a>
         </div>
+
+        <div class="button010">
+            <a href="/create442">create442</a>
+        </div>
+
+        <div class="button010">
+            <a href="/create352">create352</a>
+        </div>
+
+
     </form>
 
 {% endblock %}
